--- a/map.html
+++ b/map.html
@@ -1,54 +1,38 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Google Maps Example</title>
-  <style>
-    /* Set the size of the map container */
-    #map {
-      height: 500px;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <!-- Map container -->
-  <div id="map"></div>
+  <head>
+    <title>Add a Map with Markers using HTML</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-  <!-- Include the Google Maps JavaScript API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script type="module" src="./index.js"></script>
+  </head>
+  <body>
+    <gmp-map
+      center="43.4142989,-124.2301242"
+      zoom="4"
+      map-id="DEMO_MAP_ID"
+      style="height: 400px"
+    >
+      <gmp-advanced-marker
+        position="37.4220656,-122.0840897"
+        title="Mountain View, CA"
+      ></gmp-advanced-marker>
+      <gmp-advanced-marker
+        position="47.648994,-122.3503845"
+        title="Seattle, WA"
+      ></gmp-advanced-marker>
+    </gmp-map>
 
-  <script>
-    // Initialize the map
-    function initMap() {
-      // Set the initial center and zoom level of the map
-      const mapOptions = {
-        center: { lat: 37.7749, lng: -122.4194 }, // San Francisco coordinates
-        zoom: 12,
-      };
-
-      // Create the map instance
-      const map = new google.maps.Map(document.getElementById("map"), mapOptions);
-
-      // Add a marker to the map
-      const marker = new google.maps.Marker({
-        position: { lat: 37.7749, lng: -122.4194 },
-        map: map,
-        title: "San Francisco",
-      });
-
-      // Add an info window to the marker
-      const infoWindow = new google.maps.InfoWindow({
-        content: "<h3>San Francisco</h3><p>Welcome to San Francisco!</p>",
-      });
-
-      // Open the info window when the marker is clicked
-      marker.addListener("click", () => {
-        infoWindow.open(map, marker);
-      });
-    }
-
-    // Call the initMap function when the page loads
-    window.onload = initMap;
-  </script>
-</body>
+    <!-- 
+      The `defer` attribute causes the script to execute after the full HTML
+      document has been parsed. For non-blocking uses, avoiding race conditions,
+      and consistent behavior across browsers, consider loading using Promises. See
+      https://developers.google.com/maps/documentation/javascript/load-maps-js-api
+      for more information.
+      -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&libraries=maps,marker&v=beta"
+      defer
+    ></script>
+  </body>
 </html>
