--- a/JUNGLE.html
+++ b/JUNGLE.html
@@ -47,10 +47,11 @@
       if ('SpeechRecognition' in window || 'webkitSpeechRecognition' in window) {
         recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
-        recognition.interimResults = false;
+        recognition.interimResults = true;
+        recognition.continuous = true;
         recognition.addEventListener('result', (event) => {
-          const transcript = event.results[0][0].transcript;
-          document.getElementById('destination').value = transcript;
+          const transcript = event.results[event.results.length - 1][0].transcript;
+          document.getElementById('destination').value = transcript.trim();
         });
         recognition.addEventListener('end', () => {
           recognition.stop();
