--- a/map2.html
+++ b/map2.html
@@ -74,7 +74,7 @@
     // Load the Google Maps API and initialize the map
     function loadGoogleMapsAPI() {
       const script = document.createElement('script');
-      script.src = 'https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap';
+      script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyD95rSqkw6pXe8BBztDXh0B101HjTksy-4&callback=initMap';
       script.async = true;
       document.body.appendChild(script);
     }
